--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,12 @@ body {
     color: white;
 }
 
+#to-do-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #to-do-div {
     height: 200px;
     width: 500px;
